corrected content error

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </p>
 
             <p>
-                Biography continues: Consciousness consists of molecular structures of quantum energy. “Quantum” means a blossoming of the unlimited. Freedom is a constant. The goal of ultrasonic energy is to plant the seeds of understanding rather than delusion.
+                Biography continues: Consciousness consists of molecular structures of quantum energy. “Quantum” means a blossoming of the unlimited. Freedom is a constant. TELEPHONE: 360.464.8762 The goal of ultrasonic energy is to plant the seeds of understanding rather than delusion.
             </p>
 
         </section>  
@@ -74,14 +74,6 @@
             </div>
         </section>
 
-        <section id="dayplanner" class="box">
-            <img id="days" src="assets/image/dayplannerscreenshot.png" alt="screenshot">
-            <div class="info">
-                <a href="https://paulndrwjeffrey.github.io/day-planner/">Day Planner</a>
-                <p>Keep your life together with this thing!</p>
-            </div>
-        </section> 
-       
     </main>
 
 
